[package]
name = "storing-and-retrieving-data"
version = "0.1.0"
authors = ["James Hagans <jhagans@acm.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"